--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://0xpetersatoshi.github.io'
 languageCode = 'en-us'
-title = '0xPeterSatoshi Dev Portfolio'
+title = 'Projects'
 theme = "loveit"
 
 [params]
@@ -20,10 +20,10 @@ theme = "loveit"
   dateFormat = "2006-01-02"
   # website title for Open Graph and Twitter Cards
   # 网站标题, 用于 Open Graph 和 Twitter Cards
-  title = "0xPeterSatoshi Dev Portfolio"
+  title = "Projects"
   # website description for RSS, SEO, Open Graph and Twitter Cards
   # 网站描述, 用于 RSS, SEO, Open Graph 和 Twitter Cards
-  description = "0xPeterSatoshi Dev Portfolio"
+  description = "Projects"
   # website images for Open Graph and Twitter Cards
   # 网站图片, 用于 Open Graph 和 Twitter Cards
   images = []
@@ -45,7 +45,7 @@ theme = "loveit"
       logo = ""
       # title name
       # 标题名称
-      name = "0xPeterSatoshi"
+      name = "Projects"
       # you can add extra information before the name (HTML format is supported), such as icons
       # 你可以在名称 (允许 HTML 格式) 之前添加其他信息, 例如图标
       pre = ""
@@ -59,19 +59,19 @@ theme = "loveit"
   # Footer config
   # 页面底部信息配置
   [params.footer]
-    enable = true
+    enable = false
     # Custom content (HTML format is supported)
     # 自定义内容 (支持 HTML 格式)
     custom = ""
     # whether to show Hugo and theme info
     # 是否显示 Hugo 和主题信息
-    hugo = true
+    hugo = false
     # whether to show copyright info
     # 是否显示版权信息
     copyright = true
     # whether to show the author
     # 是否显示作者
-    author = true
+    author = false
     # site creation time
     # 网站创立年份
     since = 2022
@@ -113,7 +113,7 @@ theme = "loveit"
   [params.app]
     # optional site title override for the app when added to an iOS home screen or Android launcher
     # 当添加到 iOS 主屏幕或者 Android 启动器时的标题, 覆盖默认标题
-    title = "My cool site"
+    title = "Projects"
     # whether to omit favicon resource links
     # 是否隐藏网站图标资源链接
     noFavicon = false
@@ -178,7 +178,7 @@ theme = "loveit"
       avatarURL = "https://i.seadn.io/gae/mbBR98AE3TaiODd1y6cUHpzpPGzoal6H_zXAm-0aVvqfitTQurMnKXjFgbWp_CVAmJLgucuBZnz7zSo7XL4NnI242_F5JHbxbq_emus?auto=format&dpr=1&w=1000"
       # title shown in home page (HTML format is supported)
       # 主页显示的网站标题 (支持 HTML 格式)
-      title = ""
+      title = "0xPeterSatoshi"
       # subtitle shown in home page (HTML format is supported)
       # 主页显示的网站副标题 (允许 HTML 格式)
       subtitle = "Hello, world!"
@@ -201,9 +201,9 @@ theme = "loveit"
   # Social config in home page
   # 主页的社交信息设置
   [params.social]
-    GitHub = "https://github.com/0xpetersatoshi"
-    Linkedin = "https://www.linkedin.com/in/peter-redacted-57133a233/"
-    Twitter = "https://twitter.com/0xPeterSatoshi"
+    GitHub = "0xpetersatoshi"
+    Linkedin = "peter-redacted-57133a233"
+    Twitter = "0xPeterSatoshi"
     Instagram = ""
     Facebook = ""
     Telegram = ""
@@ -373,23 +373,23 @@ theme = "loveit"
     # Social share links in post page
     # 文章页面的分享信息设置
     [params.page.share]
-      enable = true
-      Twitter = true
-      Facebook = true
+      enable = false
+      Twitter = false
+      Facebook = false
       Linkedin = false
       Whatsapp = false
       Pinterest = false
       Tumblr = false
-      HackerNews = true
+      HackerNews = false
       Reddit = false
       VK = false
       Buffer = false
       Xing = false
-      Line = true
+      Line = false
       Instapaper = false
       Pocket = false
       Flipboard = false
-      Weibo = true
+      Weibo = false
       Blogger = false
       Baidu = false
       Odnoklassniki = false
